--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -18,7 +18,7 @@
     </div>
 </div>
 <ul class="main-content-list filter-2">
-    <li class="ic cl list-animate" ng-repeat="book in filteredBooks = (storybooks() | storybookPaginationFilter:available.currentPage:available.maxScenarios)">
+    <li class="ic cl list-animate" ng-repeat="book in filteredBooks = (storybooks() | storybookPaginationFilter:available.currentPage:available.maxScenarios) track by book.id">
         <div ng-class="{'active':available.selectedItem === 'book'+book.id}" ng-click="available.selectedItem = 'book'+book.id">
             <div class="title">
                 <i class="fa fa-bars" ng-click="available.toggleExpand('book',book.id)"></i>
@@ -34,7 +34,7 @@
             </div>
         </div>
         <ul>
-            <li class="ic cl" ng-repeat="story in book.stories">
+            <li class="ic cl" ng-repeat="story in book.stories track by story.id">
                 <div ng-class="{'active':available.selectedItem === 'story'+story.id}" ng-click="available.expandStory(book.id,story.id)">
                     <div class="title">
                         <i class="fa" ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}"></i>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <ul ng-class="{'expand':story.expand === true || expand() === 'book'+book.id || expand() === 'all'}">
-                    <li class="ic cl" ng-repeat="scenario in story.scenarios">
+                    <li class="ic cl" ng-repeat="scenario in story.scenarios track by scenario.id">
                         <div ng-class="{'active':available.selectedItem === 'scenario'+scenario.id}" ng-click="available.selectedItem = 'scenario'+scenario.id">
                             <div class="title">
                                 <span>{{ scenario.title }}</span>
